Deltatime en InputManager y Camara mas lenta

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,9 @@ Assets/Test_ShaderGraphBlog-master/Test_ShaderGraphBlog-master/Assets/Gizmos.met
 Assets/Test_ShaderGraphBlog-master/Test_ShaderGraphBlog-master/Assets.meta
 Assets/Test_ShaderGraphBlog-master/Test_ShaderGraphBlog-master.meta
 Assets/Test_ShaderGraphBlog-master.meta
+Assets/StreamingAssets/Master.strings.bank.meta
+Assets/StreamingAssets/Master.strings.bank
+Assets/StreamingAssets/Master.bank.meta
+Assets/StreamingAssets/Master.bank
+Assets/StreamingAssets.meta
+Assets/Shaders/Textures.meta
